--- a/sass/components/_heading.scss
+++ b/sass/components/_heading.scss
@@ -1,6 +1,9 @@
 .section__heading {
-    // margin-bottom: 50px;
-    // @include text ($tea:center, $fow:700, $fos:36px, $lih:42px);
-    @include text ($tea: center, $fow: 700, $fos: 28px, $lih: 33px);
     margin-bottom: 30px;
+    @include text ($tea: center, $fow: 700, $fos: 28px, $lih: 33px);
+    
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 50px;
+        @include text ($tea:center, $fow:700, $fos:36px, $lih:42px);
+    }
 }
