--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -4,7 +4,14 @@
     font-weight: 700;
     font-size: 24px;
     line-height: 28px;
+    letter-spacing: 0.03em;
     padding: 16px 0;
+
+    @media screen and (min-width: 1200px) {
+        font-size: 26px;
+        line-height: 31px;
+        height: 80px;
+    }
 
     @media screen and (min-width: 768px) {
         padding: 26px 0;
