--- a/sass/components/_send.scss
+++ b/sass/components/_send.scss
@@ -1,10 +1,18 @@
 .send {
-    // @include flex;
-    // gap: 12px;
+    @media screen and (min-width:1200px) {
+        @include flex ($ai: center);
+        gap: 12px;
+    }
 }
 
 .send__email {
-    // width: 358px;
+    @media screen and (min-width:768px) and (max-width:1199px) {
+        width: 450px;
+    }
+    @media screen and (min-width:1200px) {
+        width: 358px;
+        margin-bottom: 0;
+    }
     width: 100%;
     height: 50px;
     padding: 16px 15px;
