--- a/sass/layot/_filters.scss
+++ b/sass/layot/_filters.scss
@@ -2,7 +2,14 @@
     @include flex ($jc: start);
     flex-wrap: wrap;
     margin-bottom: 30px;
-    // margin-bottom: 50px;
+
+    @media screen and (min-width: 768px) {
+        justify-content: center;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 50px;
+    }
     gap: 8px;
 }
 
