--- a/sass/layot/_hero.scss
+++ b/sass/layot/_hero.scss
@@ -1,24 +1,23 @@
 .hero {
-
     max-width: 100%;
-    padding: 118px 0;
     margin-left: auto;
     margin-right: auto;
-    // max-width: 1600px;
-    // padding: 200px 0;
     
     text-align: center;
     background-color: $bgd-color;
-    background-image:
-        linear-gradient($translucent-bgd-color, $translucent-bgd-color),
-        url(../images/hero-mob.jpg);
+    background-image: linear-gradient($translucent-bgd-color, $translucent-bgd-color);
     background-size: cover;
+    @media screen and (max-width: 767px) {
+        padding: 118px 0;
+        background-image:url(../images/hero-mob.jpg);
 
-    @media screen and (min-resolution: 2dppx) {
+        @media screen and (min-resolution: 2dppx) {
             background-image: url(../images/hero-mob2x.jpg);
         }
+    }
 
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        padding: 118px 0;
         background-image: url(../images/hero-tab.jpg);
 
         @media screen and (min-resolution: 2dppx) {
@@ -26,7 +25,7 @@
         }
     }
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 1200px) {
         background-image: url(../images/hero-top.jpg);
 
         @media screen and (min-resolution: 2dppx) {
@@ -44,6 +43,8 @@
     @media screen and (min-width: 1200px) {
         & .container {
             width: 696px;
+            max-width: 1600px;
+            padding: 106px 0;
         }
     }
 }
