--- a/sass/layot/_projects.scss
+++ b/sass/layot/_projects.scss
@@ -1,22 +1,32 @@
 .projects {
-    // @include flex;
-    // flex-wrap: wrap;
-    // gap: $gap;
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 480px) and (max-width: 767px) {
             max-width: 450px;
             margin: 0 auto;
         }
 
-    
+    @media screen and (min-width: 768px) {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: $gap;
+    }    
 }
 
 .projects__item {
     @media screen and (max-width: 767px) {
         max-width: 450px;
-
         &:not(:last-child) {
             margin-bottom: $gap;
         }
     }
-    // @include calc (2, $gap, 3);
+
+    @media screen and (min-width: 768px) {
+        max-width: 354px;
+        @include calc (1, $gap, 2);
+    }
+
+    @media screen and (min-width: 1200px) {
+        max-width: 370px;
+        @include calc (2, $gap, 3);
+    }
 }
